# deepseek-quickstart

./: requirements.txt  毕业总结.md
deepseek/api/: RAG和向量数据库.md  deepseek_api.ipynb  deepseek_api.py  gomoku.html  jupyter_cmd.txt  rag_mfd_deepseek.ipynb  rag_milvus_deepseek.ipynb
deepseek/api/local_vector_db/: chroma.sqlite3
deepseek/ollama/: # 搭建自己的本地开源openai.md  homework.md  私有化大模型部署完整指南.md
deepseek/rednote/: beauty.md  function_calling.ipynb  rednote.ipynb
dify/: # 猫饲养与品种FAQ.md  deepseek.html  shake.html  企业微信配置.md  猫猫作业.md  雪茄作业.md
dify/整理文档/: dify+langbot.md
distill/: qwen_1.5B_lora.ipynb
distill/outputs/: README.md
distill/outputs/checkpoint-60/: README.md  rng_state.pth  trainer_state.json
distill/qwen-1.5b_lora_model/: adapter_config.json
distill/unsloth_compiled_cache/: UnslothGRPOTrainer.py  UnslothRLOOTrainer.py  UnslothSFTTrainer.py
fastgpt/: fastgpt与企业级rag.md
fastgpt/猫猫客服/: init.sql  售前问题.md  售后问题.md
mcp/: map与a2a.md  南京周末烤鸭之旅规划.md
mcp/travel-planner/: README.md  mcp-config.json  pyproject.toml  travel_planner.py  春节云南7日游旅游计划.md
