[project]
name = "travel-planner"
version = "0.1.0"
description = "旅游规划助手MCP服务器 - 提供行程规划、景点推荐、美食指南、穿衣建议等功能"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.10.1",
]
authors = [
    {name = "Travel Planner Team"}
]
keywords = ["travel", "planner", "MCP", "tourism", "Yunnan"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Scheduling",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
travel-planner = "travel_planner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
